Build with Maven on a JDK 25 baseline
Replaces the Ant build with a three-module Maven reactor
(buildtools/nasgen, core, shell) and moves the sources to the standard
Maven layout. The leftover in-JDK make files and jtreg trees, unused
since Nashorn was extracted from the JDK, are removed.

At the same time the project targets Java 25. A JDK 25 or newer is
required to build, not just to target: nasgen and the test262, benchmark
and run profiles fork ${java.home}/bin/java, so maven-enforcer-plugin
checks the JVM running Maven. A JDK toolchain would not do - exec-maven-
plugin ignores toolchains whenever "executable" is set, which it is here,
and the resulting build would compile for 25 while running nasgen on
something older.

What the version bump required:

  - ASM 7.3.1 -> 9.10.1. Older ASM cannot read the class files javac now
    produces, which nasgen parses at build time, and this changes the
    org.ow2.asm version consumers need. The ASM API level used by nasgen
    and NashornTextifier goes from ASM7 to ASM9.

  - ListAdapter implements both List and Deque, which since Java 21 each
    declare reversed() with unrelated return types, so it has to declare
    an override of its own. Added ListAdapter.Reversed, a write-through
    view, rather than returning a copy.

  - The jjs shell no longer consults System.getSecurityManager(). Both
    calls were dead guards after JEP 486 and the method is deprecated for
    removal.

  - JEP 486 also removed @CallerSensitive from
    AccessController.doPrivileged and Thread.getContextClassLoader, which
    the two script tests pinning Dynalink's caller-sensitive handling were
    written against. They now use Class.forName and
    AccessibleObject.setAccessible, which are still caller sensitive.

Also fixes the shell module's javadoc, which failed on the JDK-internal
imports for want of the exports javac gets, and on the @toolGuide and
@moduleGraph tags. That break predates the version bump, but CI runs
"mvn verify javado